# scaling-succotash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  GUIDE.md  LICENSE  Makefile  PERFORMANCE_REPORT.md  README.md  archive_repo.py  docker-compose.yml  native_baseline.py  pyproject.toml  requirements.txt  run_baseline.sh  run_load.py
.github/workflows/: ci.yml
app/: main.py
app/api/routers/: search.py  tags.py
app/core/: opensearch_client.py
app/models/: schemas.py
app/services/: agent_service.py  intelligence_service.py  search_service.py
data/: companies.csv
data/opensearch/nodes/0/_state/: _20.fdm  _20.fdt  _20.fdx  (+8 more)
docs/: AUDIT_REPORT.md  DEMO.md  DEVELOPMENT.md  DOCKER.md  FUTURE.md  RUNBOOK.md  SPEC_AUDIT_REPORT.md  architecture.md  assumptions.md  opensearch.md
docs/performance/: PERFORMANCE_REPORT.md  baseline_stats.csv  optimized_stats.csv  profile.txt
docs/pr_descriptions/: V2-PR1-Infra.md  V2-PR2-Inference.md  V2-PR3-Gateway.md  V2-PR4-Workers.md
frontend/: Dockerfile  app.py  requirements.txt
gateway_api/: Dockerfile  requirements.txt
gateway_api/app/: main.py
gateway_api/app/core/: redis_cache.py  telemetry.py
gateway_api/app/models/: schemas.py
gateway_api/app/routers/: async_tasks.py  search.py  tags.py
gateway_api/app/services/: llm_router.py  opensearch_client.py  search_service.py  search_strategies.py
inference_service/: Dockerfile  requirements.txt
inference_service/app/: main.py  telemetry.py
inference_service/app/models/: embedding_model.py  reranker_model.py
k8s/: kind-config.yaml
k8s/base/: kustomization.yaml
k8s/base/api/: api.yaml
k8s/base/frontend/: frontend.yaml
k8s/base/inference/: inference.yaml
k8s/base/jaeger/: jaeger.yaml
k8s/base/opensearch/: opensearch.yaml
k8s/base/redis/: redis.yaml
k8s/base/worker/: worker.yaml
notebooks/: demo.ipynb
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb
scripts/: archive_repo.py  download_dataset.py  generate_mock_data.py  generate_report.py  ingest_data.py  native_baseline.py  run_baseline_native.sh  run_load.py
spec/: v6.md
spec/pr_descriptions/: pr-24-v10-kubernetes.md
src/api/: Dockerfile  main.py
src/api/core/: config.py  redis_cache.py
src/api/domain/: __init__.py  interfaces.py
src/api/models/: schemas.py
src/api/routers/: async_tasks.py  search.py  tags.py
src/api/services/: llm_router.py  opensearch_client.py  search_service.py  search_strategies.py
src/frontend/: Dockerfile  app.py
src/inference/: Dockerfile  main.py
src/scripts/: ingest_data.py
src/worker/: Dockerfile  agent_workflows.py  batch_ingestion.py
src/worker/tools/: __init__.py  search.py
tests/: test_agent_workflows.py  test_config_and_llm.py  test_frontend.py  test_gateway.py  test_inference.py  test_intelligence.py  test_main_and_tasks.py  test_opensearch_pool.py  test_redis_cache.py  test_repository.py  test_search.py  test_search_service.py  test_tags_and_strategies.py  test_worker_tools.py
tests/e2e/: test_search_flow.py  test_services.py
tests/load/: locustfile.py
worker/: Dockerfile  requirements.txt
worker/tasks/: agent_workflows.py  batch_ingestion.py
(+58 files in other folders)
