[project]
name = "scaling-succotash"
version = "3.0.0"
description = "Enterprise B2B Company Search & Intelligence API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.23.2",
    "opensearch-py>=2.3.1",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.4.2",
    "litellm>=1.0.0",
    "polars>=0.19.12",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.1",
    "watchdog>=6.0.0",
    "numpy<2.0.0",
    "transformers<4.39",
    "torch<=2.2.2",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pyinstrument>=4.7.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
    "pandas",
    "matplotlib",
    "locust",
    "gevent",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-redis",
    "types-requests",
    "kaggle>=2.0.0",
    "faker>=40.11.0",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.13.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
markers = [
    "e2e: marks tests as end-to-end requiring full infrastructure"
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
# Ignoring specific pydocstyle rules that are unnecessary (e.g., D100 module docstring if strictness is too high for empty __init__.py files)
ignore = ["D100"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests/"]
